[gd_scene load_steps=21 format=3 uid="uid://06xr0ip26ljd"]

[ext_resource type="Script" uid="uid://bq0ols1mg17p8" path="res://shop/shop.gd" id="1_sd7uk"]
[ext_resource type="Script" uid="uid://2dtwwmb36wip" path="res://effects/effect/effect.gd" id="3_mmyc1"]
[ext_resource type="Resource" uid="uid://dowcow3idr6uh" path="res://heroes/resources/void_cat/void_cat.tres" id="3_orod7"]
[ext_resource type="Script" uid="uid://be1yqgwhd7gu0" path="res://heroes/components/hero_stats.gd" id="3_q4g17"]
[ext_resource type="Script" uid="uid://fcr77u101a5h" path="res://effects/damage_effect/damage_effect.gd" id="4_orod7"]
[ext_resource type="Resource" uid="uid://csfguy4pfjem6" path="res://heroes/resources/tree/tree.tres" id="5_cd0xb"]
[ext_resource type="Script" uid="uid://m8r1oy4pfeq4" path="res://shop/weighted_item.gd" id="5_ljlg5"]
[ext_resource type="Resource" uid="uid://dabx83soglwev" path="res://heroes/resources/void_jelly/void_jelly.tres" id="5_xad5q"]
[ext_resource type="Resource" uid="uid://dwkg5ckxoo20t" path="res://items/testitem1.tres" id="6_bv5vx"]
[ext_resource type="Texture2D" uid="uid://dwygc3evt85wp" path="res://heroes/resources/murloc/murloc.png" id="6_yrv44"]
[ext_resource type="Resource" uid="uid://crvwxum2jiasx" path="res://items/testitem2.tres" id="7_mmyc1"]
[ext_resource type="Resource" uid="uid://c2yw8lbpo5g78" path="res://heroes/resources/hydra/hydra.tres" id="7_pafut"]
[ext_resource type="Script" uid="uid://cruwimt38nwr7" path="res://shop/weighted_random_list.gd" id="8_orod7"]
[ext_resource type="Script" uid="uid://d142wudbd8l8" path="res://items/components/item_data.gd" id="8_pafut"]
[ext_resource type="PackedScene" uid="uid://5d2tgixtskiy" path="res://combat/hero_line/hero_line.tscn" id="12_orod7"]

[sub_resource type="Resource" id="Resource_hv745"]
resource_local_to_scene = true
script = ExtResource("4_orod7")
aoe_target_type = 1
single_target_types = Array[int]([])
include_self = false
damage = 1
use_effect_owner_damage = false
triggers = Array[int]([10])
metadata/_custom_type_script = "uid://fcr77u101a5h"

[sub_resource type="Resource" id="Resource_c8ks2"]
resource_local_to_scene = true
script = ExtResource("3_q4g17")
max_hp = 3
current_hp = 3
damage = 4
rarity = 0
effects = Array[ExtResource("3_mmyc1")]([SubResource("Resource_hv745")])
item_list = Array[ExtResource("8_pafut")]([])
hero_name = "Murdoch"
description = "Deals 1 damage to all heroes when this hero gets buffed"
model = ExtResource("6_yrv44")
metadata/_custom_type_script = "uid://be1yqgwhd7gu0"

[sub_resource type="Resource" id="Resource_cd0xb"]
script = ExtResource("5_ljlg5")
item = ExtResource("6_bv5vx")
weight = 2.0
metadata/_custom_type_script = "uid://m8r1oy4pfeq4"

[sub_resource type="Resource" id="Resource_yrv44"]
script = ExtResource("5_ljlg5")
item = ExtResource("7_mmyc1")
weight = 5.0
metadata/_custom_type_script = "uid://m8r1oy4pfeq4"

[sub_resource type="Resource" id="Resource_pafut"]
script = ExtResource("8_orod7")
list = Array[ExtResource("5_ljlg5")]([SubResource("Resource_cd0xb"), SubResource("Resource_yrv44")])
metadata/_custom_type_script = "uid://cruwimt38nwr7"

[node name="Shop" type="Node2D"]
script = ExtResource("1_sd7uk")
hero_pool = Array[ExtResource("3_q4g17")]([ExtResource("3_orod7"), ExtResource("5_xad5q"), ExtResource("5_cd0xb"), SubResource("Resource_c8ks2"), ExtResource("7_pafut")])
item_pool = SubResource("Resource_pafut")
hero_offset = Vector2(400, 700)
item_offset = Vector2(1200, 700)

[node name="RerollButton" type="Button" parent="."]
offset_left = 83.0
offset_top = 693.0
offset_right = 180.0
offset_bottom = 733.0
theme_override_font_sizes/font_size = 40
text = "Reroll Shop"

[node name="NextRoundButton" type="Button" parent="."]
offset_left = 83.0
offset_top = 762.0
offset_right = 180.0
offset_bottom = 802.0
theme_override_font_sizes/font_size = 40
text = "Next Round"

[node name="ItemContainer" type="Node" parent="."]

[node name="HeroContainer" type="Node" parent="."]

[node name="PlayerParty" parent="." instance=ExtResource("12_orod7")]
unique_name_in_owner = true
position = Vector2(1183, 203)

[node name="MoneyDisplay" type="RichTextLabel" parent="."]
unique_name_in_owner = true
offset_left = 78.0
offset_top = 71.0
offset_right = 118.0
offset_bottom = 111.0
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
text = "$50"
